--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.2",
+    "cookies-next": "^4.1.1",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
