--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-multi-date-picker-itpsolver": "^0.0.7",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.0",
     "react-toastify": "^10.0.5"
