--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-multi-date-picker": "^4.4.1",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.0",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "reactjs-popup": "^2.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
