--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-multi-date-picker": "^4.4.1",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.0",
+    "react-responsive-pagination": "^2.4.2",
     "react-toastify": "^10.0.5",
     "reactjs-popup": "^2.0.6"
   },
