--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@reduxjs/toolkit": "^2.2.2",
     "axios": "^1.6.8",
     "cookies-next": "^4.1.1",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-leaflet": "^4.2.1",
     "react-multi-date-picker": "^4.4.1",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.0",
