--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.8",
     "cookies-next": "^4.1.1",
     "next": "14.1.4",
+    "nextjs-toploader": "^1.6.11",
     "react": "^18",
     "react-dom": "^18",
     "react-multi-date-picker": "^4.4.1",
