--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.2.2",
     "axios": "^1.6.8",
     "cookies-next": "^4.1.1",
+    "jalali-moment": "^3.3.11",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "next": "14.1.4",
     "nextjs-toploader": "^1.6.11",
