--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-responsive-pagination": "^2.4.2",
     "react-toastify": "^10.0.5",
     "reactjs-popup": "^2.0.6",
+    "sharp": "^0.33.3",
     "swiper": "^11.1.0"
   },
   "devDependencies": {
