--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 3001",
     "build": "next build",
-    "start": "next start",
+    "start": "next start --port 3001",
     "lint": "next lint"
   },
   "dependencies": {
@@ -14,10 +14,10 @@
     "cookies-next": "^4.1.1",
     "jalali-moment": "^3.3.11",
     "leaflet-defaulticon-compatibility": "^0.1.2",
-    "next": "14.1.4",
+    "next": "14.1.0",
     "nextjs-toploader": "^1.6.11",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-multi-date-picker": "^4.4.1",
     "react-otp-input": "^3.1.1",
