--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.2",
+    "@smastrom/react-rating": "^1.5.0",
     "axios": "^1.6.8",
     "cookies-next": "^4.1.1",
     "jalali-moment": "^3.3.11",
