--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.7",
     "@reduxjs/toolkit": "^2.2.2",
     "@smastrom/react-rating": "^1.5.0",
     "axios": "^1.6.8",
     "cookies-next": "^4.1.1",
+    "framer-motion": "^11.1.9",
     "jalali-moment": "^3.3.11",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "next": "14.1.0",
     "nextjs-toploader": "^1.6.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-embed": "^3.7.0",
+    "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
     "react-multi-date-picker": "^4.4.1",
     "react-otp-input": "^3.1.1",
