--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 /package-lock.json
+
+/public/sw.js
+/public/swe-worker-5c72df51bb1f6ee0.js
+/public/workbox-c06b064f.js
