--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,27 +5,27 @@
   "description": "This next.js app is a PWA.",
   "icons": [
     {
-      "src": "./favicon-16x16.png",
+      "src": "./carCheck-16x16.png",
       "sizes": "16x16",
       "type": "image/png"
     },
     {
-      "src": "./favicon-32x32.png",
+      "src": "./carCheck-32x32.png",
       "sizes": "32x32",
       "type": "image/png"
     },
     {
-      "src": "./apple-icon-60x60.png",
+      "src": "./carCheck-60x60.png",
       "sizes": "60x60",
       "type": "image/png"
     },
     {
-      "src": "./apple-icon-120x120.png",
+      "src": "./carCheck-120x120.png",
       "sizes": "120x120",
       "type": "image/png"
     },
     {
-      "src": "./ms-icon-310x310.png",
+      "src": "./carCheck-310x310.png",
       "sizes": "310x310",
       "type": "image/png"
     }
@@ -46,6 +46,23 @@
       "label": "Features"
     }
   ],
+  "shortcuts" : [
+    {
+      "src": "./apple-icon-120x120.png",
+      "sizes": "120x120",
+      "type": "image/png",
+      "platform": "wide",
+      "label": "Homepage"
+    },
+    {
+      "src": "./ms-icon-310x310.png",
+      "sizes": "310x310",
+      "type": "image/png",
+      "platform": "wide",
+      "label": "Features"
+    }
+  ],
+
   "theme_color": "#FFFFFF",
   "background_color": "#FFFFFF",
   "start_url": "/",
