change short-name in manifest.json

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "id": "any_id",
   "name": "car check",
-  "short_name": "Next PWA",
+  "short_name": "Car Check",
   "description": "This next.js app is a PWA.",
   "icons": [
     {
