--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.0",
     "react-responsive-pagination": "^2.4.2",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
     "reactjs-popup": "^2.0.6",
     "sharp": "^0.33.3",
