--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^9.1.0",
     "react-responsive-pagination": "^2.4.2",
     "react-spinners": "^0.13.8",
+    "react-stars": "^2.2.5",
     "react-toastify": "^10.0.5",
     "reactjs-popup": "^2.0.6",
     "sharp": "^0.33.3",
