--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "car-website",
-  "version": "0.1.0", 
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --port 3001",
@@ -31,6 +31,7 @@
     "react-spinners": "^0.13.8",
     "react-stars": "^2.2.5",
     "react-toastify": "^10.0.5",
+    "react-use-draggable-scroll": "^0.4.7",
     "reactjs-popup": "^2.0.6",
     "sharp": "^0.33.3",
     "swiper": "^11.1.0"
