--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "eslint": "9.8.0",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "prettier": "3.2.5",
