change manifest.json image address

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -32,14 +32,14 @@
   ],
   "screenshots" : [
     {
-      "src": "./apple-icon-120x120.png",
+      "src": "./carCheck-120x120.png",
       "sizes": "120x120",
       "type": "image/png",
       "platform": "wide",
       "label": "Homepage"
     },
     {
-      "src": "./ms-icon-310x310.png",
+      "src": "./carCheck-310x310.png",
       "sizes": "310x310",
       "type": "image/png",
       "platform": "wide",
@@ -48,14 +48,14 @@
   ],
   "shortcuts" : [
     {
-      "src": "./apple-icon-120x120.png",
+      "src": "./carCheck-120x120.png",
       "sizes": "120x120",
       "type": "image/png",
       "platform": "wide",
       "label": "Homepage"
     },
     {
-      "src": "./ms-icon-310x310.png",
+      "src": "./carCheck-310x310.png",
       "sizes": "310x310",
       "type": "image/png",
       "platform": "wide",
