--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --port 3001",
+    "ed": "next dev -H 0.0.0.0",
     "build": "next build",
     "start": "next start --port 3006",
     "lint": "next lint"
