--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-use-draggable-scroll": "^0.4.7",
     "reactjs-popup": "^2.0.6",
     "sharp": "^0.33.3",
-    "swiper": "^11.1.0"
+    "swiper": "^11.1.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
